cleanup and reworked route to match documentation + Added JsonIgnoreProperty