@@ -1,14 +1,10 @@
 package storyteam.server.story.controller;
 
-import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.slf4j.Logger;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -17,13 +13,13 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import storyteam.server.story.dto.StoryDTO;
+import storyteam.server.story.model.BlocStory;
 import storyteam.server.story.model.Story;
-import storyteam.server.story.repository.StoryRepository;
-import storyteam.server.story.repository.UserRepository;
+import storyteam.server.story.repository.BlocStoryRepository;
 import storyteam.server.story.services.StoryService;
 
 @CrossOrigin
@@ -33,71 +29,93 @@ public class StoryController {
 	Logger LOGGER = org.slf4j.LoggerFactory.getLogger(StoryController.class);
 
 	@Autowired
-	StoryRepository storyRepository;
-
-	// A ENLEVER APRES C'EST JUSTE POUR TEST
-	@Autowired
-	UserRepository userRepository;
+	BlocStoryRepository BlocStoryRepository;
 
 	@Autowired
 	StoryService storyService;
 
-	// Il faudrait faire une fonction qui récupère une Story pour jouer
-	// Ajouter un id pour la récupération de la story
-	// "/"{id}"/show"
-	@GetMapping("/play/{id}")
-	public ResponseEntity<Story> playStory(@PathVariable("id") Integer id) {
-		LOGGER.info("id est {}", id);
-		Optional<Story> story = storyRepository.findById(id);
+	/**
+	 * Récupère un bloc d'une certaine story
+	 *
+	 * @param storyId
+	 * @param blocId
+	 * @return
+	 */
+	@GetMapping("/play/{storyId}/bloc/{blocId}")
+	public ResponseEntity<BlocStory> playStoryBloc(@PathVariable("storyId") Integer storyId,
+			@PathVariable("blocId") Integer blocId) {
+		Optional<BlocStory> blocStory = storyService.getBlocStory(storyId, blocId);
+		if (blocStory.isPresent()) {
+			return ResponseEntity.ok(blocStory.get());
+		}
+		return ResponseEntity.notFound().build();
+	}
+
+	/**
+	 * Requete pour commencé a jouer une story
+	 *
+	 * @param storyId
+	 * @return
+	 */
+	@GetMapping("/play/{storyId}")
+	ResponseEntity<Story> playStoryStart(@PathVariable("storyId") Integer storyId) {
+		Optional<Story> story = storyService.getStory(storyId);
 		if (story.isPresent()) {
 			return ResponseEntity.ok(story.get());
 		}
-		return ResponseEntity.ok(story.get());
-
+		return ResponseEntity.notFound().build();
 	}
 
-	// @GetMapping("/play/{id}")
-	// public Story showStory(@PathVariable("id") Integer id) {
-	// Story story = storyRepository.findById(id);
-	// if (story != null) {
-	// return story;
-	// }
-	// throw new Exception();
-
-	// // }
-
-	@PostMapping(value = "/create", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Story> createStory(@RequestBody StoryDTO storyDTO
-	/* @RequestBody Integer userId */
-	) {
-		Story story = storyService.getStoryFromDTO(storyDTO);
-		return ResponseEntity.ok(storyRepository.save(story));
+	/**
+	 * Save une story en bdd depuis son json envoyé dans le body TODO algo de
+	 * creation
+	 *
+	 * @param storyDTO
+	 * @return
+	 */
+	@PostMapping(value = "/save")
+	public ResponseEntity<Story> createStory(@RequestBody StoryDTO storyDTO) {
+		Story story = storyService.buildStoryDTO(storyDTO);
+		return ResponseEntity.ok(storyService.save(story));
 	}
 
-	@PostMapping(value = "/update", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
-	public ResponseEntity<Story> updateStory(@RequestBody StoryDTO storyDTO) {
-		Optional<Story> story = storyRepository.findById(storyDTO.getId());
-		if (story.isPresent()) {
-
-			story.get().setName(storyDTO.getName());
-			story.get().setCreationDate(LocalDate.now());
-			story.get().setDescription(storyDTO.getDescription());
-			return ResponseEntity.ok(storyRepository.save(story.get()));
-		}
-		return ResponseEntity.badRequest().body(null);
-
-	}
-
+	/**
+	 * Supprime une story via son id /!\ TODO verif si la story appartient a l'user
+	 * connecté
+	 *
+	 * @param storyId
+	 */
 	@DeleteMapping("/delete/{id}")
-	@ResponseStatus(HttpStatus.NO_CONTENT)
 	public void deleteStory(@PathVariable("id") Integer storyId) {
-		storyRepository.deleteById(storyId);
+		storyService.delete(storyId);
 	}
 
-	@GetMapping("getPage/{page}")
+	/**
+	 * Récupère une page de toutes les story dans ordonée par date
+	 *
+	 * @param page
+	 * @return
+	 */
+	@GetMapping("page/{page}")
 	public List<Story> getPageStory(@PathVariable("page") Integer page) {
 		System.out.println("weoigfhpiweough");
-		return storyService.getPageStory(page).stream().collect(Collectors.toList());
+		return storyService.getPageStory(page).toList();
 	}
 
+	/**
+	 * Effecture une recherche dans les stories avec les parametres
+	 *
+	 * @param page
+	 * @param username
+	 * @param storyname
+	 * @param tags
+	 * @param orderby
+	 * @return
+	 */
+	@GetMapping("search/{page}")
+	public List<Story> searchStories(@PathVariable("page") Integer page,
+			@RequestParam("username") Optional<String> username, @RequestParam("storyname") Optional<String> storyname,
+			@RequestParam("tags") Optional<String> tags, @RequestParam("orderby") Optional<String> orderby) {
+		return storyService.search(page, username, storyname, tags, orderby).toList();
+	}
 }
